[gd_scene load_steps=4 format=3 uid="uid://blix7dlirci3u"]

[ext_resource type="Script" path="res://objects/collectible.gd" id="1_m2p20"]
[ext_resource type="Texture2D" uid="uid://drr5rida50gpe" path="res://assets/sprites/ui_collectible.png" id="1_x78in"]

[sub_resource type="CircleShape2D" id="CircleShape2D_38kgg"]
radius = 9.0

[node name="Collectible" type="Node2D"]
script = ExtResource("1_m2p20")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_x78in")

[node name="CollectibleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectibleArea"]
shape = SubResource("CircleShape2D_38kgg")

[connection signal="body_entered" from="CollectibleArea" to="." method="_on_collectible_area_body_entered"]
